--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "nanoid": "^5.1.6",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
